[tool.poetry]
name = "kettlearchivist"
version = "0.1.0"
description = "Toolset for The Kettle Archive Project"
authors = ["Yuki Nagato <37764578+YUKI2eN3e@users.noreply.github.com>"]
readme = "README.md"
packages = [
	{ include = "KettleArchivist", from = "." }
]

[tool.poetry.scripts]
kettlearchivist = "KettleArchivist.__main__:run"

[tool.poetry.dependencies]
python = "^3.9"
scrapetube = "^2.3.1"
yt-dlp = "^2023.2.17"
rich = "^13.3.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
